# google_multi-agents

./: .gitignore  README.md  demo.html  env.example  pyproject.toml
backend/: README.md  analyze_models.py  check_data_sources.py  coding_agent.py  flexible_agent.py  main.py  main_rag.py  main_rag_deepresearch.py  rag_agent.py  requirements.txt  search_agent.py  workflow_manager.py  workflow_manager_rag.py
backend/api/: README.md  __init__.py  main.py  start_server.py  test_api.py
backend/config/: gemini_config.yml  gemini_config_rag.yml  prompts_deepresearch.yml  workflow_config.yml  workflow_deepresearch.yml
backend/config/coding/: gemini_config_coding.yml  workflow_coding.yml
backend/config/deepresearch/: workflow_deepresearch.yml
backend/config/flexible_agent/: README.md  gemini_config_flexible.yml  workflow_flexible.yml
backend/config/rag/: workflow_rag.yml
backend/config/research/: gemini_config_research.yml  workflow_research.yml
backend/config/search/: gemini_config_search.yml  workflow_search.yml
backend/core/: README.md  __init__.py
backend/core/agents/: __init__.py  base_agent.py  flexible_agent_factory.py  flexible_loop_checker.py
backend/core/config/: __init__.py  config_loader.py  flexible_config.py
backend/core/tools/: __init__.py  tool_registry.py
backend/core/utils/: common.py  document_reader.py  file_utils.py  response_formatter.py
backend/core/workflow/: __init__.py  flexible_workflow_manager.py
backend/data_model/: constants.py  data_models.py
backend/input_markdown/: coding_standards.docx.md  project_requirements.txt.md  test.xlsx.md  test_ppt.pptx.md
backend/llm_providers/: gemini_provider.py
backend/prompts/: prompts_rag.yml
backend/prompts/coding/: prompts_coding.yml
backend/prompts/flexible_agent/: prompts_flexible.yml
backend/prompts/main/: prompts.yml
backend/prompts/research/: prompts_research.yml
backend/prompts/search/: prompts_search.yml
backend/tools/: __init__.py  deep_research_tool.py
examples/: deep_research_example.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AgentConfigurator.tsx  Header.tsx  LiveWorkflowStream.tsx  ModelSelector.tsx  (+4 more)
tests/: test_gemini_provider.py  test_workflow.py
(+188 files in other folders)
