[tool.poetry]
name = "workflow-google"
version = "0.1.0"
description = "A sequential workflow system using Google's Gemini LLM"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
google-ai-generativelanguage = "^0.6.1"
google-adk = "^0.1.0"
pyyaml = "^6.0.1"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
google-generativeai = ">=0.3.0"
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.20.0"
ruff = ">=0.2.1"
mypy = ">=0.900"
pylint = ">=2.12.0"
black = ">=22.0.0"
isort = ">=5.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs = ">=1.3.0"
mkdocs-material = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 